* FEA#7672 Allow a new behaviour for waiver of premiums: proportion. When selected, this behaviour allows making a proportion on the lower level frequency in order to have one contract invoice with the right amount to pay. For example, if the billing frequency is quarterly, and two on three months of a billing period are a waiver of premium, then the invoice will only charge one month.
* BUG#7643 Automatic creation of waivers of premiums is only done for options which have a waiver of premium

Version 1.14 - 2017-11-09
* FEA#7383 Allow to configure automatic waiver of premium periods with a rate. Add an account to compensate the waiver if not paid by the insurer

Version 1.12 - 2017-04-28

Version 1.10 - 2016-11-02

Version 1.8 - 2016-07-06
* FEA#0000 Module Creation