@@ -14,3 +14,9 @@ Fonctionnalités
 .. include:: features.rst
 
 
+Aide utilisateur
+----------------
+
+.. toctree::
+
+    user/batch.rst
